--- a/Vivek Saliya/index.html
+++ b/Vivek Saliya/index.html
@@ -3,35 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quote Generator</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    
-    <div class="container"> 
-        <div class="top">
-            <h1>Quotes</h1>
-            <p>Quotes that will inspire and enlighten you.</p>
-        </div>
-        <div class="main">
-            <div class="quote-area">
-                <p id="quote">
-                    "Life is about not knowing, having to change, taking the moment and making the best of it, without knowing what's going to happen next"
-                </p>
-                <p id="author">
-                    - Gilda Radner
-                </p>
-            </div>
-        </div>
-        <div class="bottom">
-            <button id="btn">Generate new quote</button>
-        </div>
-        <div class="end">
-            <p>Made using Quote Garden API</p>
-        </div>
-    </div>
+       <header>
+         <div id="navbar">
+           <a id="logo">John Doe</a>  
+           <a href="#">Home</a>
+           <a href="#">About</a>
+           <a>Contact us</a>
+         </div>
+       </header>
 
-    <script src="app.js"></script>
+       <div id="mainpage">
+         <h1>John Doe</h1>
+         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          <br>
+         Sit soluta corporis repellat aut cupiditate harum ipsa dolorum, necessitatibus evenie.
+         </p>
+       </div>
+       <div id="aboutsection">
+        <img src="Image_-_How_to_design_a_website_.jpeg.jpg" alt="image">
+        <br><br>
+        <h1 id="services">Our services</h1>
+        <br>
+        <h3>Search engine optimization (SEO)</h3>
+          <p>SEO is a key element of quality web design. It's important to understand how SEO intersects with web design, as this will help with future marketing efforts.</p>
+          <br> 
+       <h3>Responsive design</h3>
+          <p>Responsive design ensures that a website's content is consistently delivered across all devices. This is done by making sure that the HTML, CSS, and JavaScript elements are clear and usable.  </p>
+          <br> 
+       <h3>User experience (UX) design</h3>
+          <p>UX designers research and test how users interact with a website to ensure that it's usable, intuitive, and accessible.</p>
+          <br> 
+       <h3>Graphic design</h3>
+          <p>Graphic designers create the visual elements of a website, such as the layout, color scheme, typography, and images. </p>
+       </div>
+       <br><br>
+       <div id="contactform">
+        <a href="contact.html">Contact us</a>
+       </div>
+       <br><br><br>  
 </body>
 </html>
